[tool.poetry]
name = "epics-scripts"
version = "0.0.0"
description = "Some useful EPICS scripts"
authors = ["Alexey Gerasev <a.v.gerasyov@inp.nsk.su>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyepics = "^3.5.0"
pyepics-asyncio = "^0.1.0"
aiofiles = "^0.8.0"
types-aiofiles = "^0.8.6"
aiocsv = "^1.2.1"
aioitertools = "^0.10.0"

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
yapf = "^0.32.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "yapf"
column_limit = 128
indent_width = 4
continuation_indent_width = 4
spaces_before_comment = 1

[tool.mypy]
strict = true
namespace_packages = true
